# voiceinput

./: .gitignore  API-EXPLAINED.md  ARCHITECTURE.md  CMakeLists.txt  HOW-IT-WORKS.md  README.md  SETUP-COMPLETE.md  VISUAL-INDICATORS.md  config.example.json  indicator.sh  install.sh  niri-config.kdl  run-daemon.sh  start-daemon.sh  start-voiceinput.sh  test-api-audio.sh  test-dictation.sh  trigger.sh  voiceinput-visualization.html
include/: desktop.h  voiceinput.h
src/: audio.c  config.c  daemon.c  desktop.c  fifo-daemon.c  gemini.c  history.c  hotkey.c  indicator.c  inject.c  main.c  niri-daemon.c  textproc.c  validate-key.c
